<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_adafruit_pwmhat_msgs</name>
  <version>0.0.0</version>
  <description>Messsages for ROS2 Node for Adafruit Raspberry Pi 3 PWM 16-channel HAT</description>
  <maintainer email="misterblue@misterblue.com">pi</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- added for building IDL (see https://index.ros.org/doc/ros2/Tutorials/Custom-ROS2-Interfaces/) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
